--- a/scss/_bg.scss
+++ b/scss/_bg.scss
@@ -12,5 +12,5 @@
 
   $right-side-optical-adjustment: 1,
 
-	$debug: 1
+	$debug: 0
 );
